# Breeding-Calculator

./: .gitignore  README.md
data/: combi_unique.json  eggs.json  pals.json
docs/: ARQUITETURA.md
mod-cpp/: CMakeLists.txt  build.ps1
mod-cpp/shim/GUI/: GUI.hpp
mod-cpp/src/: Breeding.cpp  Breeding.hpp  Language.cpp  Language.hpp  Log.cpp  Log.hpp  Overlay.cpp  Overlay.hpp  PalData.gen.cpp  PalData.hpp  Renderer.hpp  RendererD3D11.cpp  RendererD3D12.cpp  Textures.cpp  Textures.hpp  Ui.cpp  Ui.hpp  main.cpp
mod-cpp/tests/: engine_dump.cpp  preview.cpp
mod/PalBreedCalc/Scripts/: gamedata.lua
mod/PalBreedCalc/icons/: egg_PalEgg_Fire_01.dds  egg_PalEgg_Normal_01.dds  egg_PalEgg_Water_01.dds  pal_BOSS_Baphomet.dds  pal_BOSS_BlackPuppy_Ice.dds  pal_BOSS_BluePlatypus.dds  pal_BOSS_BluePlatypus_Fire.dds  pal_BOSS_CubeTurtle.dds  pal_BOSS_DreamDemon.dds  pal_BOSS_ElecLizard.dds  pal_BOSS_ElecPanda_BossRush.dds  pal_BOSS_FairyDragon_Water.dds  pal_BOSS_FengyunDeeper.dds  pal_BOSS_FlowerDoll.dds  pal_BOSS_FoxExorcist.dds  pal_BOSS_FoxMage.dds  pal_BOSS_GoldenHorse.dds  pal_BOSS_GrassGolem_Dark.dds  pal_BOSS_GrassMinotaur_Ice.dds  pal_BOSS_GrassPanda.dds  pal_BOSS_HawkBird.dds  pal_BOSS_Hedgehog.dds  pal_BOSS_HerculesBeetle_Ground.dds  pal_BOSS_Horus_Water.dds  pal_BOSS_IceNarwhal.dds  pal_BOSS_KabukiMan.dds  pal_BOSS_Kelpie_Fire.dds  pal_BOSS_KendoFrog_Dark.dds  pal_BOSS_KingBahamut_Dragon.dds  pal_BOSS_KingWhale_otomo.dds  pal_BOSS_LanternButler.dds  pal_BOSS_LeafMomonga.dds  pal_BOSS_LilyQueen.dds  pal_BOSS_LittleBriarRose.dds  pal_BOSS_LizardMan.dds  pal_BOSS_LizardMan_Fire.dds  pal_BOSS_Manticore.dds  pal_BOSS_MimicDog.dds  pal_BOSS_Monkey_Ice.dds  pal_BOSS_Mothman.dds  (+102 more)
mod/workshop/PalBreedCalc/: Info.json
mod/workshop/PalBreedCalc/Scripts/: breeding.lua  data.lua  main.lua
mod/workshop/PalBreedCalc/icons/: egg_PalEgg_Dark_01.dds  egg_PalEgg_Dragon_01.dds  egg_PalEgg_Earth_01.dds  egg_PalEgg_Electricity_01.dds  egg_PalEgg_Ice_01.dds  egg_PalEgg_Leaf_01.dds  egg_PalEgg_MutationPal.dds  egg_PalEgg_WorldTree_01.dds  pal_AmaterasuWolf_Dark_Quest_Enemy.dds  pal_Anubis.dds  pal_BOSS_Alpaca.dds  pal_BOSS_AmaterasuWolf.dds  pal_BOSS_Bastet_Ice.dds  pal_BOSS_BlackPuppy.dds  pal_BOSS_BlueDragon_Ice.dds  pal_BOSS_BlueThunderHorse.dds  pal_BOSS_CaptainPenguin.dds  pal_BOSS_CatBat.dds  pal_BOSS_CatMage_Fire.dds  pal_BOSS_ChickenPal.dds  pal_BOSS_ClownRabbit.dds  pal_BOSS_CowPal.dds  pal_BOSS_CuteMole.dds  pal_BOSS_DandelionGirl.dds  pal_BOSS_DarkCrow.dds  pal_BOSS_DarkFlameFox.dds  pal_BOSS_DarkScorpion_Ground.dds  pal_BOSS_Deer.dds  pal_BOSS_ElecSnail_Ground.dds  pal_BOSS_FairyDragon.dds  pal_BOSS_FeatherOstrich.dds  pal_BOSS_FengyunDeeper_Electric.dds  pal_BOSS_FireKirin.dds  pal_BOSS_FlowerDinosaur.dds  pal_BOSS_FlowerRabbit.dds  pal_BOSS_FlyingManta_Thunder.dds  pal_BOSS_FoxMage_Dark.dds  pal_BOSS_Ganesha.dds  pal_BOSS_GhostAnglerfish_Fire.dds  pal_BOSS_GrassGolem.dds  (+129 more)
tools/: breeding.py  extract_game_data.py  extract_icons.py  gen_cpp_data.py  install_mod.ps1  make_import_lib.py  make_thumbnail.py  package_workshop.ps1  validate.py  validate_cpp.py  validate_lua.py
